# sharanga_backend

./: .gitignore  Dockerfile  docker-compose.yml  emp_id_map.json  main.py  migration_report.json  prometheus_middleware.py  pyproject.toml  requirements.txt  test.py
RabsProject/api/compliences/: LoadWatch.py  MultiStream.py  PPEViolation.py  Report.py  SingleStream.py
RabsProject/api/inventory/: CustomerComplaint.py  FgStock.py  ProductionPlan.py  RejectionDetail.py  StoreStock.py  StoreStockRegister.py  ToolManage.py
RabsProject/api/positioning/: BracketD.py  BracketE.py  PesCoverA.py  PesCoverB.py
RabsProject/api/user/: User_Camera.py
RabsProject/config/: FgStockConfig.py  HR_InductionConfig.py  Level_1_Config.py  Level_2_Config.py  Level_3_Config.py  Level_4_Config.py  Multilevel_L2Config.py  ProductionPConfig.py  RejectionConfig.py  StoreStockConfig.py  ToolMConfig.py  WorkwearConfig.py
RabsProject/cores/CameraStream/: camera_system.py
RabsProject/cores/auth/: authorise.py
RabsProject/cores/prediction_logic/: classification.py  detection.py  image_utils.py  local_file_handler.py
RabsProject/cores/utils/: __init__.py  utils.py
RabsProject/exception/: __init__.py
RabsProject/logger/: __init__.py
RabsProject/pymodels/: __init__.py  models.py
RabsProject/services/: aws.py  mongodb.py  scheduler.py  send_email.py
app/api/routes/: auth.py  employee.py  fg_stock.py  hr.py  open_points.py  parts_config.py  password_reset.py  shifts.py  (+3 more)
app/core/: setting.py
app/shared/: cache_manager.py  current_shift_data.py  timezone.py  variant_utils.py
(+59 files in other folders)
